--- a/stayle.css
+++ b/stayle.css
@@ -2024,7 +2024,7 @@ v.dropdown-menu > li > a:focus,
 
 #blog article:hover,
 #latest-posts article:hover {
-  border-bottom-color: #F88A79;
+  border-bottom-color: #FFFFFF;
 }
 
 #blog .post-thumb img,
